--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "axios": "^1.3.3",
@@ -22,7 +23,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.4"
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
+    "react-native-dotenv": "^3.4.7"
   },
   "private": true
 }
